--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <cdi-api.version>2.0</cdi-api.version>
         <weld.version>3.0.5.Final</weld.version>
         <weld-junit5.version>2.0.2.Final</weld-junit5.version>
+        <hamcrest.version>2.2</hamcrest.version>
+
     </properties>
 
     <dependencies>
@@ -71,6 +73,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
